# video-star

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  video-star.spec
.github/workflows/: release.yml
tests/: test_chapters_generator.py  test_post_processor.py  test_srt_generator.py  test_time_utils.py
video_star/: __init__.py  __main__.py  config.py
video_star/core/: audio_extractor.py  output_writer.py  pipeline.py  post_processor.py  transcriber.py
video_star/generators/: chapter_title_generator.py  chapters_generator.py  description_generator.py  show_notes_generator.py  srt_generator.py  thumbnail_extractor.py
video_star/gui/: app.py  drop_zone.py  progress_panel.py  results_panel.py  settings_dialog.py  thumbnail_viewer.py
video_star/models/: pipeline_result.py
video_star/utils/: ffmpeg_utils.py  file_utils.py  time_utils.py
